--- a/content/代码文件/代码索引目录.md
+++ b/content/代码文件/代码索引目录.md
@@ -54,3 +54,11 @@
 [[FRA events (Commune of France)]]
 ## history
 [[FRA - Communard France]]
+## localisation
+#### replace
+[[Cof-basic_l_simp_chinese]]
+[[Cof-economy_l_simp_chinese]]
+[[Cof-international_l_simp_chinese]]
+[[Cof-military_l_simp_chinese]]
+[[Cof-politics_l_simp_chinese]]
+[[FRA - Commune of France l_simp_chinese]]
